--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@arcjet/next": "^1.0.0-beta.8",
     "@clerk/nextjs": "^6.23.2",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.11.1",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -22,6 +23,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-email/components": "^0.3.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -35,6 +37,7 @@
     "react-hook-form": "^7.60.0",
     "react-spinners": "^0.17.0",
     "recharts": "^3.1.0",
+    "resend": "^4.7.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
@@ -46,7 +49,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
     "prisma": "^6.11.1",
-    "react-email": "4.2.3",
+    "react-email": "^4.2.3",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4"
   }
